--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
+# THYMELEAF (ThymeleafAutoConfiguration)
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
